# goodhart

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  croissant.json  demo.py  llm_baseline_prompt.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
evaluation/: ENCODING_STANDARD.md  README.md  analyze.py  taxonomy.json
evaluation/additional/: battery_control.py  bimanual_lidtwist.py  building_octopus.py  carl_simple_reward.py  compiler_mlgo.py  crypto_market_making.py  curla_driving.py  dribblebot.py  drone_swooper.py  finance_riskaware.py  heparin_dosing.py  network_routing.py  nuclear_power_plant.py  order_execution.py  pan_covid_health.py  pan_covid_political.py  pan_glucose.py  pan_riverraid.py  pan_riverraid_fuel.py  pan_traffic_accel.py  pan_traffic_bottleneck.py  pan_traffic_lanes.py  pan_traffic_scope.py  pan_traffic_velocity.py  (+10 more)
goodhart/: __init__.py  __main__.py  annotate.py  builders.py  cli.py  detect.py  engine.py  fmt.py  mcp_server.py  models.py  presets.py  viz.py
proofs/: GoodhartProofs.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
scripts/: bump_version.sh  viz_gauntlet.sh
tests/: test_advisories.py  test_annotate.py  test_builders.py  test_cli.py  test_detect.py  test_engine.py  test_examples.py  test_explanations.py  test_invariants.py  test_mcp_server.py  test_models.py  test_offpolicy_rules.py  test_preset_verdicts.py  test_proofs.py  test_rules.py  test_validation.py  test_viz.py
(+273 files in other folders)
