[build-system]
requires = ["setuptools>=68.0,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodhart"
version = "1.0.0"
description = "Catch reward traps before training. Named after Goodhart's Law."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Audie Leon Sheridan", email = "audieleon@users.noreply.github.com"},
]
keywords = ["reinforcement-learning", "reward-hacking", "goodhart", "rl", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml",
    "tomli>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
detect = ["gymnasium>=0.26"]
dev = ["pytest"]
all = ["matplotlib>=3.5", "gymnasium>=0.26"]

[project.scripts]
goodhart = "goodhart.cli:main"

[project.urls]
Homepage = "https://github.com/audieleon/goodhart"
Repository = "https://github.com/audieleon/goodhart"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["goodhart*"]
